--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TrackGrid</title>
+  <title>Tracking Grid</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Added for StompJS -->
+  <script type="application/javascript">
+    var global = window;
+  </script>
 </head>
-<body>
+<body class="ag-theme-balham-dark">
   <app-root></app-root>
 </body>
 </html>
