--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     var global = window;
   </script>
 </head>
-<body class="ag-theme-balham-dark">
+<body class="ag-theme-balham-dark" style="margin: 0px">
   <app-root></app-root>
 </body>
 </html>
